# ConvolutionalNeuralNetwork

./: classification.py
c++_code/example-app/: CMakeLists.txt  example_app.cpp
c++_code/image_classification/: CMakeLists.txt  main.cpp
python_code/: classification.py
server/: CMakeLists.txt  Dockerfile  ImageClassificaion.h  ImageClassification.cpp  ImageClassification.h  WebServer.cpp  WebServer.h  main.cpp
